--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.xinly.dendrobe">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.xinly.dendrobe">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -15,13 +17,20 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".module.main.MainActivity">
+        <activity android:name=".module.register.RegisterActivity">
+        </activity>
+        <activity
+                android:name=".module.login.LoginActivity"
+                android:theme="@style/FullScreen.AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".module.login.MobileLoginActivity">
+        </activity>
+        <activity android:name=".module.main.MainActivity">
         </activity>
     </application>
 
