--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,14 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".module.register.RegisterActivity">
+        <activity android:name=".module.user.SetPasswordActivity">
+        </activity>
+        <activity android:name=".module.user.FindPasswordActivity">
+        </activity>
+        <activity android:name=".module.user.RegisterActivity">
         </activity>
         <activity
-                android:name=".module.login.LoginRegisterActivity"
+                android:name=".module.user.LoginRegisterActivity"
                 android:theme="@style/FullScreen.AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -28,7 +32,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".module.login.LoginActivity">
+        <activity
+                android:name=".module.user.LoginActivity"
+                android:launchMode="singleTop">
         </activity>
         <activity android:name=".module.main.MainActivity">
         </activity>
