--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation project(':librarys:XinlyCore')
     // 底部导航
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
+    // banner
+    implementation 'com.youth.banner:banner:1.4.10'
 }
