--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,17 @@ allprojects {
     }
 }
 
+ext {
+    compileSdkVersion = 28
+    minSdkVersion = 19
+    targetSdkVersion = 28
+    versionCode = 110
+    versionName = "1.1.1"
+    support_library = '28.0.0'
+    glide = '4.7.1'
+    constraint = '1.1.3'
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
