--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            tools:replace="android:icon,android:theme,android:roundIcon,android:label"
-            tools:ignore="GoogleAppIndexingWarning">
+            tools:ignore="GoogleAppIndexingWarning"
+            tools:replace="android:icon,android:theme,android:roundIcon,android:label">
         <!-- 适配7.0 -->
         <provider
                 android:name="androidx.core.content.FileProvider"
@@ -31,7 +31,7 @@
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/file_paths_public"/>
         </provider>
-        <activity android:name="com.matisse.ui.view.MatisseActivity" />
+
         <!-- 闪屏页 START -->
         <activity
                 android:name=".module.launch.SplashActivity"
@@ -41,7 +41,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity> <!-- 闪屏页 END -->
+        </activity>
+        <!-- 闪屏页 END -->
         <!-- 账户操作 START -->
         <activity
                 android:name=".module.user.LoginRegisterActivity"
@@ -57,10 +58,16 @@
         </activity>
         <activity android:name=".module.user.BasicInfoActivity">
         </activity>
+        <activity android:name=".module.user.AccountBindingActivity">
+        </activity>
+        <activity android:name=".module.user.UserInfoEditActivity">
+        </activity>
         <!-- 账户操作 END -->
         <activity
                 android:name=".module.main.MainActivity"
                 android:launchMode="singleTask">
+        </activity>
+        <activity android:name="com.matisse.ui.view.MatisseActivity">
         </activity>
     </application>
 
