--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,8 @@
         </activity>
         <activity android:name=".module.user.UserInfoEditActivity">
         </activity>
+        <activity android:name=".module.user.ChangeSecurityCodeActivity">
+        </activity>
         <!-- 账户操作 END -->
         <activity
                 android:name=".module.main.MainActivity"
