--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,75 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.xinly.dendrobe">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.xinly.dendrobe" >
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-            android:name=".XinlyApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning"
-            tools:replace="android:icon,android:theme,android:roundIcon,android:label">
+        android:name=".XinlyApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:icon,android:theme,android:roundIcon,android:label" >
+        <activity android:name=".module.user.SetSecurityCodeActivity" >
+        </activity>
         <!-- 适配7.0 -->
         <provider
-                android:name="androidx.core.content.FileProvider"
-                android:authorities="${applicationId}.fileprovider"
-                android:exported="false"
-                android:grantUriPermissions="true">
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true" >
             <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths_public"/>
-        </provider>
-
-        <!-- 闪屏页 START -->
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths_public" />
+        </provider> <!-- 闪屏页 START -->
         <activity
-                android:name=".module.launch.SplashActivity"
-                android:theme="@style/Splash.FullScreen.AppTheme">
+            android:name=".module.launch.SplashActivity"
+            android:theme="@style/Splash.FullScreen.AppTheme" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- 闪屏页 END -->
+        </activity> <!-- 闪屏页 END -->
         <!-- 账户操作 START -->
         <activity
-                android:name=".module.user.LoginRegisterActivity"
-                android:theme="@style/FullScreen.AppTheme">
+            android:name=".module.user.LoginRegisterActivity"
+            android:theme="@style/FullScreen.AppTheme" >
         </activity>
-        <activity android:name=".module.user.LoginActivity">
+        <activity android:name=".module.user.LoginActivity" >
         </activity>
-        <activity android:name=".module.user.RegisterActivity">
+        <activity android:name=".module.user.RegisterActivity" >
         </activity>
-        <activity android:name=".module.user.FindPasswordActivity">
+        <activity android:name=".module.user.FindPasswordActivity" >
         </activity>
-        <activity android:name=".module.user.SetPasswordActivity">
+        <activity android:name=".module.user.SetPasswordActivity" >
         </activity>
-        <activity android:name=".module.user.BasicInfoActivity">
+        <activity android:name=".module.user.BasicInfoActivity" >
         </activity>
-        <activity android:name=".module.user.AccountBindingActivity">
+        <activity android:name=".module.user.AccountBindingActivity" >
         </activity>
-        <activity android:name=".module.user.UserInfoEditActivity">
+        <activity android:name=".module.user.UserInfoEditActivity" >
         </activity>
-        <activity android:name=".module.user.ChangeSecurityCodeActivity">
-        </activity>
-        <!-- 账户操作 END -->
+        <activity android:name=".module.user.ChangeSecurityCodeActivity" >
+        </activity> <!-- 账户操作 END -->
         <activity
-                android:name=".module.main.MainActivity"
-                android:launchMode="singleTask">
+            android:name=".module.main.MainActivity"
+            android:launchMode="singleTask" >
         </activity>
-        <activity android:name="com.matisse.ui.view.MatisseActivity">
+        <activity android:name="com.matisse.ui.view.MatisseActivity" >
         </activity>
     </application>
 
