--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'com.youth.banner:banner:1.4.10'
     // matisse{link https://github.com/NFLeo/Matisse-Kotlin}
     implementation 'com.nfleo:MatisseKotlin:1.1.0'
-    //6位数字密码 {link https://github.com/Jungerr/GridPasswordView}
+    // 6位数字密码 {link https://github.com/Jungerr/GridPasswordView}
     implementation 'com.jungly:gridPasswordView:0.3'
+    // 上拉加载
+    implementation rootProject.ext.dependencies["smartrefresh"]
 }
