--- a/config.gradle
+++ b/config.gradle
@@ -71,7 +71,9 @@ ext{
             // toast
             "DToast"                    :   "com.github.Dovar66:DToast:1.1.5",
             // rxBus
-            "rxbus"                     :   "com.hwangjr.rxbus:rxbus:1.0.6"
+            "rxbus"                     :   "com.hwangjr.rxbus:rxbus:1.0.6",
+            // smartrefresh
+            "smartrefresh"              :   "com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1"
     ]
 
     // kotlin 支持库
