--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,13 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning"
             tools:replace="android:icon,android:theme,android:roundIcon,android:label">
-
-        <!-- 适配7.0 -->
+        <activity
+                android:name=".module.trader.C2CTraderActivity">
+        </activity>
+        <activity android:name=".module.mine.bank.AddBankActivity">
+        </activity>
+        <activity android:name=".module.mine.bank.BankActivity">
+        </activity> <!-- 适配7.0 -->
         <provider
                 android:name="androidx.core.content.FileProvider"
                 android:authorities="${applicationId}.fileprovider"
@@ -31,9 +36,7 @@
             <meta-data
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/file_paths_public"/>
-        </provider>
-
-        <!-- 闪屏页 START -->
+        </provider> <!-- 闪屏页 START -->
         <activity
                 android:name=".module.launch.SplashActivity"
                 android:theme="@style/Splash.FullScreen.AppTheme">
@@ -42,9 +45,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <!-- 闪屏页 END -->
-
+        </activity> <!-- 闪屏页 END -->
         <!-- 账户操作 START -->
         <activity
                 android:name=".module.user.LoginRegisterActivity"
@@ -58,24 +59,16 @@
         <activity android:name=".module.user.UserInfoEditActivity"/>
         <activity android:name=".module.user.ChangeSecurityCodeActivity"/>
         <activity android:name=".module.user.InviterBindingActivity"/>
-        <activity android:name=".module.user.SetSecurityCodeActivity"/>
-        <!-- 账户操作 END -->
-
+        <activity android:name=".module.user.SetSecurityCodeActivity"/> <!-- 账户操作 END -->
         <!-- 主页 START -->
         <activity
                 android:name=".module.main.MainActivity"
-                android:launchMode="singleTask"/>
-        <!-- 主页 END -->
-
+                android:launchMode="singleTask"/> <!-- 主页 END -->
         <!-- 钱包 START -->
         <activity android:name=".module.mine.wallet.recharge.CloudRechargeActivity"/>
-        <activity android:name=".module.mine.wallet.WalletActivity"/>
-        <!-- 钱包 END -->
-
+        <activity android:name=".module.mine.wallet.WalletActivity"/> <!-- 钱包 END -->
         <!-- 设置 START -->
-        <activity android:name=".module.mine.settings.SettingsActivity"/>
-        <!-- 设置 END -->
-
+        <activity android:name=".module.mine.settings.SettingsActivity"/> <!-- 设置 END -->
         <activity android:name="com.matisse.ui.view.MatisseActivity">
         </activity>
     </application>
